<resources>
    <string name="app_name">PalindromeChecker</string>
    <string name="name_hint">Name</string>
    <string name="palindrome_hint">Palindrome</string>
    <string name="check_btn">CHECK</string>
    <string name="next_btn">NEXT</string>
    <string name="second_screen">Second Screen</string>
    <string name="welcome">Welcome</string>
    <string name="choose_a_user">Choose a User</string>
    <string name="third_screen">Third Screen</string>
    <string name="empty_data">Empty Data</string>
</resources>