<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/background"
    tools:context=".ui.first.FirstActivity">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/circleImageView"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_gravity="center"
        android:layout_marginTop="125dp"
        android:src="@drawable/add" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/nameTextLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:clipToPadding="true"
        android:layout_gravity="center"
        app:hintEnabled="false"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/nameEditText"
            android:layout_width="350dp"
            android:layout_height="50dp"
            android:padding="8dp"
            android:background="@drawable/rounded_edittext_bg"
            android:hint="@string/name_hint"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/palindromeTextLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:hintEnabled="false"
        android:clipToPadding="true"
        android:layout_gravity="center">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/palindromeEditText"
            android:layout_width="350dp"
            android:layout_height="50dp"
            android:background="@drawable/rounded_edittext_bg"
            android:hint="@string/palindrome_hint"
            android:inputType="text"
            android:padding="8dp" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_check"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:text="@string/check_btn"
        android:layout_gravity="center"
        android:backgroundTint="@color/green_dark"/>

    <Button
        android:id="@+id/btn_next"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/next_btn"
        android:layout_gravity="center"
        android:backgroundTint="@color/green_dark" />

</LinearLayout>